<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dev.ehnyn.rubikmath.RubikActivity"
    tools:showIn="@layout/activity_rubik">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cvForm"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        card_view:cardCornerRadius="4dp"
        android:layout_marginTop="53dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <RelativeLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent">

            <TextView
                android:id="@+id/tvTotalCube"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cubeNum"
                android:padding="8dp"
                android:layout_margin="8dp"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/colorBlack"/>

            <TextView
                android:id="@+id/tvTotal"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_below="@+id/tvTotalCube"
                android:textAlignment="center"
                android:padding="4dp"
                android:layout_margin="8dp"
                android:textAppearance="?android:textAppearanceMedium"
                android:hint="@string/Result"/>

            <TextView
                android:id="@+id/tvHiddenCubes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hiddenCube"
                android:layout_below="@+id/tvTotal"
                android:padding="4dp"
                android:layout_margin="8dp"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/colorBlack"/>


            <TextView
                android:id="@+id/tvHidden"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="10dp"
                android:hint="@string/Result"
                android:layout_margin="8dp"
                android:layout_below="@+id/tvHiddenCubes"
                android:textAppearance="?android:textAppearanceMedium" />

            <TextView
                android:id="@+id/tvfaceCube"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/faceCube"
                android:layout_below="@+id/tvHidden"
                android:padding="4dp"
                android:layout_margin="8dp"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/colorBlack"/>

            <TextView
                android:id="@+id/tvFace"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_below="@+id/tvfaceCube"
                android:textAppearance="?android:textAppearanceMedium"
                android:textAlignment="center"
                android:padding="4dp"
                android:layout_margin="8dp"
                android:hint="@string/Result"/>

            <TextView
                android:id="@+id/tvNextCube"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nextCube"
                android:layout_below="@+id/tvFace"
                android:padding="4dp"
                android:layout_margin="8dp"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/colorBlack"/>

            <TextView
                android:id="@+id/tvNext"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_below="@+id/tvNextCube"
                android:textAppearance="?android:textAppearanceMedium"
                android:textAlignment="center"
                android:padding="4dp"
                android:layout_margin="8dp"
                android:hint="@string/Result"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>



