<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.dev.ehnyn.rubikmath.MainActivity">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cvForm"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        card_view:cardCornerRadius="4dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:id="@+id/rl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/tvTotalCube"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/totalCubes"
                android:padding="8dp"
                android:layout_gravity="center"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/colorBlack"
                tools:layout_editor_absoluteY="0dp"
                tools:layout_editor_absoluteX="0dp" />

            <EditText
                android:id="@+id/etTotal"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:inputType="number"
                android:textAlignment="center"
                android:padding="4dp"
                android:layout_marginTop="24dp"
                android:hint="@string/condition"
                tools:layout_editor_absoluteY="0dp"
                tools:layout_editor_absoluteX="16dp" />

            <Button
                android:id="@+id/submit"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:background="@color/colorMagenta"
                android:text="@string/submit"
                android:layout_gravity="center"
                android:padding="4dp"
                android:layout_marginTop="48dp"
                android:textAlignment="center" />

        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>
